[package]
name = "turbomcp-core"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 foundation: ProtocolVersion, JsonRpcMessage, RequestContext, Identity, McpError. no_std + alloc."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "protocol", "no_std", "wasm"]
categories = ["no-std", "encoding"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.17", features = ["serde"] }
# std-only: CancellationToken integration lives behind the `std` feature.
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { version = "1", features = ["std"] }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "dep:tokio-util"]
# Construct RequestContext in downstream unit tests (F-SC-4 / round-3).
test-util = []

[package.metadata.docs.rs]
all-features = true
