[package]
name = "turbomcp-dpop"

version = "3.1.3"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "DPoP (RFC 9449) implementation for TurboMCP with HSM support"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-dpop"
readme = "README.md"
keywords = ["dpop", "oauth", "security", "hsm", "rfc9449"]
categories = ["authentication", "cryptography", "web-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cryptographic dependencies
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
rand = { workspace = true }
signature = "3.0"
hex = "0.4"
zeroize = "1.8"
subtle = "2.6"

# HTTP types for DPoP proof generation
http = "1.4"
url = "2.5"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID for nonce generation
uuid = { workspace = true, features = ["v4", "v7", "serde"] }

# Builder pattern for ergonomic API
bon = "3.9"

# Redis storage (optional)
redis = { version = "1.2.1", features = ["aio", "tokio-comp"], optional = true }

# HSM support - PKCS#11 (optional)
cryptoki = { version = "0.12", optional = true }
r2d2 = { version = "0.8", optional = true }
secrecy = { version = "0.10", optional = true }
parking_lot = { workspace = true, optional = true }
asn1 = { version = "0.24.1", optional = true }

# HSM support - YubiHSM (optional)
yubihsm = { version = "0.42", optional = true, features = ["usb", "http"] }

# Internal dependencies

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = []

# Storage backends
redis-storage = ["dep:redis"]

# HSM backends
hsm-pkcs11 = ["dep:cryptoki", "dep:r2d2", "dep:secrecy", "dep:parking_lot", "dep:asn1"]
hsm-yubico = ["dep:yubihsm", "dep:secrecy", "dep:parking_lot"]
hsm = ["hsm-pkcs11", "hsm-yubico"]

# Test utilities
test-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
