[package]
name = "turbomcp-ext-apps"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 Apps extension (io.modelcontextprotocol/apps) — deferred post-GA."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[dependencies]
turbomcp-core = { workspace = true }
