[package]
name = "turbomcp-ext-apps"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 Apps extension (SEP-1865, io.modelcontextprotocol/ui) — deferred post-GA."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "apps", "extension"]
categories = ["network-programming"]

[dependencies]
turbomcp-core = { workspace = true }

[package.metadata.docs.rs]
all-features = true
