[package]
name = "turbomcp-ext-tasks"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 Tasks extension (io.modelcontextprotocol/tasks)."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "tasks", "extension", "llm"]
categories = ["network-programming", "asynchronous"]

[dependencies]
turbomcp-core = { workspace = true, features = ["std"] }
turbomcp-server = { workspace = true }
turbomcp-service = { workspace = true }
turbomcp-protocol = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
time = { workspace = true, features = ["std", "formatting"] }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tower = { workspace = true }

[package.metadata.docs.rs]
all-features = true
