[package]
name = "turbomcp-grpc"
version = "3.1.3"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "gRPC transport for TurboMCP - high-performance MCP over HTTP/2"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "grpc", "tonic", "protocol", "transport"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# gRPC framework
tonic = { version = "0.14", features = ["tls-ring", "gzip", "zstd"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Async utilities
async-stream = "0.3"

# Async runtime
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

# Internal dependencies
turbomcp-core = { workspace = true, features = ["std"] }
turbomcp-types = { workspace = true, features = ["experimental-tasks"] }
turbomcp-protocol = { workspace = true, features = ["experimental-tasks"] }
turbomcp-transport-traits = { workspace = true }

# Tower integration
tower = { workspace = true }
tower-service = "0.3"
http = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = "0.1"

# Utilities
bytes = "1.11"
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost-build = "0.14"

[features]
default = ["server", "client"]
server = []
client = []
# Health checking service
health = ["tonic/channel"]
# Reflection service for debugging
reflection = []
# TLS support
tls = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
