[package]
name = "turbomcp-macros"
version = "3.1.2"
edition = "2024"
description = "Procedural macros for ergonomic MCP tool and resource registration"
license = "MIT"
authors = ["Nicholas Paterno <nick@epistates.com>"]
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "macros", "procedural", "derive", "codegen"]
categories = ["development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro-crate = "3.5"
# JSON Schema generation (always required - macros always generate schemas)
schemars = { version = "1.2" }

# CRITICAL FIX: Add dependencies for macro-generated code
# These are required because the #[server] macro generates code that uses these crates
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

turbomcp-protocol = { workspace = true }
turbomcp-transport = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0"
tokio = { workspace = true }

[features]
default = []
# CRITICAL FIX: Feature flags for macro-generated code
http = ["axum"]
tcp = ["tokio", "dep:turbomcp-transport"]
unix = ["tokio", "dep:turbomcp-transport"]

# Experimental features (pass-through to turbomcp-protocol)
experimental-tasks = ["turbomcp-protocol/experimental-tasks"]

# Note: schemars is always required and not a feature - it's used by all macros
