[package]
name = "turbomcp-macros"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 macros: #[server], #[tool], #[resource], #[prompt], #[mcp_header], #[State]."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
