[package]
name = "turbomcp-macros"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 macros: #[server], #[tool], #[resource], #[prompt], #[completion], #[mcp_header]."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "macros", "server", "codegen"]
categories = ["development-tools::procedural-macro-helpers", "network-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
