[package]
name = "turbomcp-protocol"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 protocol: version-neutral handler types + per-version generated wire modules. no_std-portable."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "protocol", "json-rpc", "no_std"]
categories = ["encoding", "no-std", "api-bindings"]

[lib]
# The generated per-version `types` modules carry the spec's prose docs
# verbatim; rustdoc misreads their indented/backticked text as Rust doctests.
# These are @generated and reviewed on regen — run real tests, not doc prose.
doctest = false

[dependencies]
turbomcp-core = { workspace = true, default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["turbomcp-core/std", "serde/std", "serde_json/std"]

[package.metadata.docs.rs]
all-features = true
