[package]
name = "turbomcp-proxy"

version = "3.1.3"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Universal MCP adapter/generator - introspection, proxying, and code generation for any MCP server"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-proxy"
keywords = ["mcp", "proxy", "adapter", "code-generation", "introspection"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# TurboMCP (consumer-only - we only depend ON these, nothing depends on us)

turbomcp-protocol = { workspace = true }
turbomcp-transport = { workspace = true, features = ["http", "tcp", "websocket"] }
turbomcp-client = { workspace = true }
turbomcp-server = { workspace = true, optional = true, features = ["http", "websocket"] }
turbomcp-auth = { workspace = true, optional = true }

# Unix domain socket transport — only on Unix platforms (macOS, Linux)
[target.'cfg(unix)'.dependencies]
turbomcp-transport = { workspace = true, features = ["unix"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11"

# CLI (optional)
clap = { version = "4.6", features = ["derive", "cargo", "env"], optional = true }
colored = { version = "3.1", optional = true }
# Removed atty (unmaintained) - use std::io::IsTerminal instead (Rust 1.70+)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# HTTP/Web (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-service = { version = "0.3", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { workspace = true, optional = true }

# WebSocket (optional)
tokio-tungstenite = { version = "0.29", optional = true, features = ["rustls-tls-native-roots"] }

# REST API & OpenAPI (optional)
utoipa = { version = "5.4", features = ["axum_extras", "macros"], optional = true }
utoipa-swagger-ui = { version = "9.0", features = ["axum"], optional = true }

# GraphQL (optional) - note: graphql support scaffolded for Phase 6
# Requires: async-graphql and async-graphql-axum from latest releases
# Currently using placeholder versions - will update when integrating async-graphql 7.0+

# Code generation (optional)
handlebars = { version = "6.4", optional = true }
convert_case = { version = "0.11", optional = true }
chrono = { version = "0.4", optional = true }
syn = { version = "2", features = ["parsing", "full"], optional = true }
proc-macro2 = { version = "1", optional = true }

# Schema generation (optional)
schemars = { version = "1.2", optional = true }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.23", features = ["v4"] }
tracing = "0.1"
thiserror = "2.0"
url = "2.5"
ipnetwork = { version = "0.21", features = ["serde"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }
jsonwebtoken = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
proptest = "1.11"
pretty_assertions = "1.4"
criterion = { workspace = true, features = ["async_tokio"] }
tracing-subscriber = { workspace = true }

[features]
default = ["cli", "runtime", "introspection"]

# Core features
introspection = []
runtime = ["introspection", "dep:turbomcp-server", "axum", "dep:tower", "tower-service", "tower-http", "futures-util", "reqwest", "tokio-tungstenite", "auth"]
tower = ["runtime"]  # Alias for runtime Tower integration (for consistency with other turbomcp crates)
codegen = ["handlebars", "convert_case", "chrono", "syn", "proc-macro2"]
schema = ["schemars"]
auth = ["dep:turbomcp-auth", "dep:jsonwebtoken", "turbomcp-auth/jwt"]

# Adapters (Phase 6)
rest = ["utoipa", "utoipa-swagger-ui", "axum", "tower", "tower-http"]
# NOTE (audit-v3.0.13 #38): The `graphql` feature is a Phase 6 placeholder. The
# scaffolded `adapters/graphql.rs` exists but no `async-graphql` deps are pinned,
# so enabling this feature does not produce a working GraphQL adapter — the gated
# code is incomplete scaffolding only. Removed from `adapters` in v3.1 so users
# don't get a false "GraphQL works" signal from `features = ["adapters"]`.
# Tracked in .strategy/AUDIT_v3.0.13_ACTION_PLAN.md (#38) for follow-up.
graphql = []  # placeholder — enabling alone produces no usable adapter
adapters = ["rest"]

# Experimental features (pass-through to turbomcp-protocol)
experimental-tasks = ["turbomcp-protocol/experimental-tasks"]

# CLI
cli = ["runtime", "clap", "colored", "tracing-subscriber"]

# Full feature set
full = ["introspection", "runtime", "codegen", "schema", "cli", "auth", "adapters"]

[[bin]]
name = "turbomcp-proxy"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "introspection"
harness = false

[[bench]]
name = "runtime_proxy"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
