[package]
name = "turbomcp-server"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 server: McpServerCore + capability traits, MethodRouter, ServerBuilder."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[dependencies]
turbomcp-core = { workspace = true, features = ["std"] }
turbomcp-protocol = { workspace = true }
turbomcp-service = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
time = { workspace = true, features = ["std", "formatting"] }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
