[package]
name = "turbomcp-service"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 service layer: McpService, Transport trait, shared RPC middleware."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[dependencies]
turbomcp-core = { workspace = true }
turbomcp-codec = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
] }
