[package]
name = "turbomcp-tcp"
version = "3.1.4"
edition = "2024"
rust-version = "1.89.0"
authors = ["Nicholas Paterno <nick@epistates.com>"]
license = "MIT"
description = "TCP transport implementation for TurboMCP SDK"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-tcp"
keywords = ["mcp", "tcp", "transport", "networking"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
# Core dependencies
turbomcp-transport-traits = { workspace = true }
turbomcp-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
