[package]
name = "turbomcp-telemetry"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 telemetry: OpenTelemetry, W3C Trace Context, metrics."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "opentelemetry", "tracing", "metrics"]
categories = ["development-tools::debugging", "network-programming"]

[dependencies]
turbomcp-core = { workspace = true }
turbomcp-service = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# The OTLP export pipeline (gRPC via tonic) + a turnkey subscriber installer.
# Off by default: the TraceContextLayer + W3C propagation + redaction work with
# any `tracing` subscriber and pull no network/runtime deps.
opentelemetry-otlp = { workspace = true, optional = true, features = ["metrics"] }
tracing-subscriber = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
otlp = [
    "dep:opentelemetry-otlp",
    "opentelemetry-otlp/grpc-tonic",
    "dep:tracing-subscriber",
    "dep:tokio",
]

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
# The in-memory exporters, to assert what the layers actually record.
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
