[package]
name = "turbomcp-transport-streamable"
version = "3.1.2"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Streamable HTTP transport types for TurboMCP - SSE encoding, session management, MCP 2025-11-25 spec"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "transport", "streamable-http", "sse", "session"]
categories = ["network-programming", "wasm", "no-std"]
readme = "README.md"
rust-version = "1.89.0"

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
# WASM-specific optimizations
wasm = ["alloc"]
# Enable alloc for no_std environments
alloc = ["dep:hashbrown"]

[dependencies]
# Serialization (no_std compatible with alloc)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# HashMap for no_std environments (std provides std::collections::HashMap)
hashbrown = { version = "0.17", default-features = false, features = ["serde", "inline-more", "default-hasher"], optional = true }

# Cryptographically secure random number generation (works on WASM via wasm_js feature)
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
